# startup-idea

./: .cursorrules  .env.example  .gitignore  LAUNCH_RUNBOOK.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/api/: Dockerfile  package.json  pyproject.toml
apps/api/app/: config.py  db.py  dependencies.py  main.py  worker.py
apps/api/app/agents/: __init__.py  graph.py  llm.py  nodes.py  state.py
apps/api/app/mcp/: server.py
apps/api/app/models/: agent_run.py
apps/api/app/routers/: discovery.py  interviews.py
apps/api/app/schemas/: handoff.py  requests.py
apps/api/app/services/: agent_runs.py  ingestion.py  pii.py
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/actions/: dashboard.ts
apps/web/app/: layout.tsx
apps/web/app/(dashboard)/: layout.tsx  page.tsx
apps/web/components/: providers.tsx
apps/web/components/dashboard/: agent-runs-feed.tsx  prd-grid.tsx  sidebar.tsx
apps/web/components/ui/: glowing-card.tsx  priority-badge.tsx  stat-card.tsx
apps/web/lib/: auth.ts
apps/web/prisma/: schema.prisma  seed.ts
apps/web/store/: use-dashboard-store.ts
docker/: .env.example  docker-compose.yml
terraform/: main.tf
