[project]
name = "product-os-api"
version = "0.1.0"
description = "ProductOS FastAPI backend — AI-native enterprise product discovery"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "supabase>=2.11.0",
    "arq>=0.26.1",
    "redis>=5.2.1",
    "langgraph>=0.2.60",
    "langchain-mistralai>=0.2.4",
    "llama-index>=0.12.5",
    "litellm>=1.55.10",
    "presidio-analyzer>=2.2.357",
    "presidio-anonymizer>=2.2.357",
    "anthropic>=0.42.0",
    "mcp>=1.2.0",
    "starlette>=0.45.3",
    "httpx>=0.28.1",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.19.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.6",
    "mypy>=1.14.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
